削除機能の追加

--- a/todo/templates/todo/detail.html
+++ b/todo/templates/todo/detail.html
@@ -24,5 +24,6 @@
 
     <div>
         <a href="{% url 'index' %}">Top</a>
+        | <a href="{% url 'delete' task.id %}">Delete</a> <!-- 削除リンクを追加 -->
     </div>
 </body>
