終了機能の追加

--- a/todo/templates/todo/detail.html
+++ b/todo/templates/todo/detail.html
@@ -24,5 +24,6 @@
 
     <div>
         <a href="{% url 'index' %}">Top</a>
+         <a href="{% url 'close' task.id %}">Close</a>
     </div>
 </body>
