--- a/todo/templates/todo/detail.html
+++ b/todo/templates/todo/detail.html
@@ -20,6 +20,7 @@
         {% else %}
         <li>Status: Not Completed</li>
         {% endif %}
+        <li>Tag: {{ task.get_tag_display }}</li>
     </ul>
 
     <div>
