--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -36,17 +36,19 @@
     {% for task in tasks %}
     <div class="text">
         <h2><a href="{% url 'detail' task.id %}">{{ task.title }}</a></h2>
-        <ul>
-            <li>Posted at: {{ task.posted_at }}</li>
-            {% if task.due_at %}
-            <li>Due at: {{ task.due_at }}</li>
-            {% endif %}
-            {% if task.completed %}
-            <li>Status: Completed</li>
-            {% else %}
-            <li>Status: Not Completed</li>
-            {% endif %}
-        </ul>
+        <div class="description">
+            <ul>
+                <li>Posted at: {{ task.posted_at }}</li>
+                {% if task.due_at %}
+                <li>Due at: {{ task.due_at }}</li>
+                {% endif %}
+                {% if task.completed %}
+                <li>Status: Completed</li>
+                {% else %}
+                <li>Status: Not Completed</li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
     {% endfor %}
 </body>
